<resources>
    <string name="app_name">webtoon</string>

    <!-- main -->
    <string name="main_bottom_menu_1">menu1</string>
    <string name="main_bottom_menu_2">menu2</string>
    <string name="main_bottom_menu_3">menu3</string>
    <string name="main_bottom_menu_4">menu4</string>
    <string name="main_bottom_menu_5">menu5</string>

    <string name="main_list_back">Back</string>
    <string name="main_list_goto_first_page">firstpage</string>
    <string name="main_list_favorite">favorite</string>

    <string name="my_radio_menu_1">mytoon</string>
    <string name="my_radio_menu_2">mystore</string>

</resources>
