<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- BACK TITLE -->

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/back_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_list_back"
            />

    </LinearLayout>

    <ImageButton
        android:id="@+id/set_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        />

    <ImageButton
        android:id="@+id/sharing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/set_area"
        />

    <View
        android:id="@+id/black_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/baseBg"
        android:layout_below="@id/back"
        />

    <RelativeLayout
        android:id="@+id/like_area"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@id/black_bar"
        >

        <ImageView
            android:id="@+id/like_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/like_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/goto_first_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_list_goto_first_page"
        />

    <TextView
        android:id="@+id/favorite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_list_favorite"
        android:layout_toLeftOf="@id/goto_first_page"
        />

    <ImageView
        android:id="@+id/favorite_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/favorite_text"
        />

    <View
        android:id="@+id/black_bar2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/baseBg"
        android:layout_below="@id/like_area"
        />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/black_bar2"
        android:background="#dedede"
        />

</RelativeLayout>